--- a/Business.html
+++ b/Business.html
@@ -83,7 +83,7 @@
       <p class="sub">
         The most expensive thing in hospitality is an empty seat. We fill empty seats, keep guests longer, and make visits more fun so they spend more and come back sooner. When you integrate your business with <strong>Le Libido</strong>, you increase revenue. Guaranteed.
       </p>
-      <div class="scarcity">Only<strong>12</strong>openings remaining.</div>
+      <div class="scarcity">Only 12 openings remaining!</div>
     </section>
 
     <!-- Billing toggle -->
@@ -108,9 +108,9 @@
           <li>Standard placement on other days</li>
         </ul>
         <a class="cta paylink"
-           data-tier="starter"
-           data-link-monthly="https://buy.stripe.com/STARTER_MONTHLY"
-           data-link-annual="https://buy.stripe.com/STARTER_ANNUAL"
+           data-tier="listed"
+           data-link-monthly="https://buy.stripe.com/LISTED_MONTHLY"
+           data-link-annual="https://buy.stripe.com/LISTED_ANNUAL"
            href="#">Subscribe to join the party</a>
       </div>
 
@@ -120,15 +120,14 @@
         <h3>Featured Venue</h3>
         <div class="price"><span class="amt" data-monthly="$499" data-annual="$4,999">$499</span> <span class="period">/<span class="unit">month</span></span></div>
         <ul class="feat">
-          <li>All Starter benefits</li>
-          <li>Prime-day feature probability: <strong>35–50%</strong></li>
+          <li>Become a feautured venue</li>
+          <li>Prime-day feature probability: <strong>20–50%</strong></li>
           <li>Enhanced placement & boosted visibility</li>
-          <li>Guest experience toolkit + promo assets</li>
         </ul>
         <a class="cta paylink"
            data-tier="scene"
-           data-link-monthly="https://buy.stripe.com/SCENE_MONTHLY"
-           data-link-annual="https://buy.stripe.com/SCENE_ANNUAL"
+           data-link-monthly="https://buy.stripe.com/FEATURED_MONTHLY"
+           data-link-annual="https://buy.stripe.com/FEATURED_ANNUAL"
            href="#">Boost your venue’s visibility</a>
       </div>
 
@@ -139,14 +138,14 @@
         <div class="price"><span class="amt" data-monthly="$899" data-annual="$8,999">$899</span> <span class="period">/<span class="unit">month</span></span></div>
         <ul class="feat">
           <li>Everything in Scene Maker</li>
-          <li><strong>Priority</strong>placement across all days</li>
-   <li>Prime-day feature probability: <strong>50–80%</strong></li>
-          <li>Dedicated success support + quarterly playbook</li>
+          <li>Prime-day feature probability: <strong>50–80%</strong></li>
+          <li>Priority placement across all days</li>
+          <li>Gain access to customer RSVP data and in-depth reports</li>
         </ul>
         <a class="cta paylink"
-           data-tier="hotspot"
-           data-link-monthly="https://buy.stripe.com/HOTSPOT_MONTHLY"
-           data-link-annual="https://buy.stripe.com/HOTSPOT_ANNUAL"
+           data-tier="spotlighted"
+           data-link-monthly="https://buy.stripe.com/SPOTLIGHTED_MONTHLY"
+           data-link-annual="https://buy.stripe.com/SPOTLIGHTED_ANNUAL"
            href="#">Stand above the rest</a>
       </div>
     </section>
