--- a/Business.html
+++ b/Business.html
@@ -71,7 +71,7 @@
       <span class="eyebrow">For Venue Owners & GMs</span>
       <h1>Turn Slow Nights into <span style="color:var(--gold)">Sold-Out Nights</span></h1>
       <p class="sub">
-        The most expensive thing in hospitality is an empty seat. We fill seats, create unforgettable social experiences for your guests, and increase repeat visits. When you integrate your business with <strong>Le Libido</strong>, you increase revenue. Guaranteed.
+        The most expensive thing in hospitality is an empty seat. We fill seats, create unforgettable social experiences for your guests, and increase repeat visits & your revenue.
       </p>
       <div class="scarcity">Only 12 openings remaining!</div>
     </section>
