--- a/Business.html
+++ b/Business.html
@@ -69,20 +69,19 @@
       <p class="sub">
         The most expensive thing in hospitality is an empty seat. We fill seats, create unforgettable social experiences for your guests, and increase repeat visits & your revenue.
       </p>
-      <div class="scarcity">Only 12 openings remaining!</div>
+      <div class="scarcity">Secure your spot! Only 12 openings remaining!</div>
     </section>
 
     <!-- Pricing: ONE tier in TWO containers -->
     <section class="pricing" id="pricing">
       <!-- FEATURED – MONTHLY -->
       <div class="plan popular" data-plan="featured-monthly">
-        <span class="tag">Most Chosen</span>
         <h3>Featured Venue — Monthly</h3>
         <div class="price"><span class="amt">$499</span> <span class="period">/month</span></div>
         <ul class="feat">
-          <li>Boost your venue’s visibility with enhanced placement</li>
-          <li>Prime-day feature probability: <strong>35–50%</strong></li>
-          <li>Promo assets & light guidance for themed nights</li>
+          <li>Become a featured Le Libido pop-up dating event venue</li>
+          <li>Secure your business's spot for a month</li>
+          <li></li>
         </ul>
         <a class="cta paylink"
            data-tier="featured"
@@ -93,13 +92,13 @@
 
       <!-- FEATURED – ANNUAL -->
       <div class="plan" data-plan="featured-annual">
-        <span class="tag">Best Value</span>
         <h3>Featured Venue — Annual</h3>
         <div class="price"><span class="amt">$4,999</span> <span class="period">/year</span></div>
         <ul class="feat">
-          <li>Everything in Monthly, locked for 12 months</li>
-          <li><strong>Save 2 months</strong> vs. paying monthly</li>
+          <li>Secure your business's spot for a month</li>
+          <li><strong>Save 2 months or $998</strong> vs. paying monthly</li>
           <li>Priority to renew your slot next year</li>
+          <li>Receive quarterly reports with in-depth customer data</li>
         </ul>
         <a class="cta paylink"
            data-tier="featured"
