--- a/Business.html
+++ b/Business.html
@@ -81,13 +81,12 @@
         <ul class="feat">
           <li>Become a featured Le Libido pop-up dating event venue</li>
           <li>Secure your business's spot for a month</li>
-          <li></li>
         </ul>
         <a class="cta paylink"
            data-tier="featured"
            data-billing="monthly"
            data-link="https://buy.stripe.com/FEATURED_MONTHLY"
-           href="#">Boost your venue’s visibility (Monthly)</a>
+           href="#">Subscribe Monthly</a>
       </div>
 
       <!-- FEATURED – ANNUAL -->
@@ -96,7 +95,7 @@
         <div class="price"><span class="amt">$4,999</span> <span class="period">/year</span></div>
         <ul class="feat">
           <li>Secure your business's spot for a month</li>
-          <li><strong>Save 2 months or $998</strong> vs. paying monthly</li>
+          <li>Save 2 months or $998 vs. paying monthly</li>
           <li>Priority to renew your slot next year</li>
           <li>Receive quarterly reports with in-depth customer data</li>
         </ul>
@@ -104,8 +103,7 @@
            data-tier="featured"
            data-billing="annual"
            data-link="https://buy.stripe.com/FEATURED_ANNUAL"
-           href="#">Boost your venue’s visibility (Annual)</a>
-        <p class="note">Annual: save 2 months</p>
+           href="#">Subscribe Annually</a>
       </div>
     </section>
 
