--- a/Business.html
+++ b/Business.html
@@ -94,7 +94,7 @@
         <h3>Featured Venue — Annual</h3>
         <div class="price"><span class="amt">$4,999</span> <span class="period">/year</span></div>
         <ul class="feat">
-          <li>Secure your business's spot for a month</li>
+          <li>Secure your business's spot for a year</li>
           <li>Save 2 months or $998 vs. paying monthly</li>
           <li>Priority to renew your slot next year</li>
           <li>Receive quarterly reports with in-depth customer data</li>
@@ -110,8 +110,7 @@
     <!-- Onboarding (mailto only; email is hidden/obfuscated) -->
     <section class="section" id="onboard">
       <h4>Submit Your Venue Details</h4>
-      <p class="small">After you purchase a plan, send us your info below. We currently feature up to <strong>12 venues per Area</strong> at a time.</p>
-
+    
       <form id="venueForm" class="grid" onsubmit="return false;">
         <input type="hidden" id="tierField" value="featured">
         <input type="hidden" id="billingField" value="">
