--- a/Business.html
+++ b/Business.html
@@ -76,7 +76,7 @@
     <section class="pricing" id="pricing">
       <!-- FEATURED – MONTHLY -->
       <div class="plan popular" data-plan="featured-monthly">
-        <h3>Featured Venue — Monthly</h3>
+        <h3>Featured Venue: Monthly</h3>
         <div class="price"><span class="amt">$499</span> <span class="period">/month</span></div>
         <ul class="feat">
           <li>Become a featured Le Libido pop-up dating event venue</li>
@@ -91,7 +91,7 @@
 
       <!-- FEATURED – ANNUAL -->
       <div class="plan" data-plan="featured-annual">
-        <h3>Featured Venue — Annual</h3>
+        <h3>Featured Venue: Annually</h3>
         <div class="price"><span class="amt">$4,999</span> <span class="period">/year</span></div>
         <ul class="feat">
           <li>Secure your business's spot for a year</li>
