--- a/Business.html
+++ b/Business.html
@@ -67,7 +67,7 @@
       <span class="eyebrow">For Venue Owners & GMs</span>
       <h1>Turn Slow Nights into <span style="color:var(--gold)">Sold-Out Nights</span></h1>
       <p class="sub">
-        The most expensive thing in hospitality is an empty seat. We fill seats, create unforgettable social experiences for your guests, and increase repeat visits & your revenue.
+        The most expensive thing in hospitality is an empty seat. We fill seats, encourage repeat visits, create unforgettable social experiences for your guests, and increase your revenue.
       </p>
       <div class="scarcity">Secure your spot! Only 12 openings remaining!</div>
     </section>
